--- a/_posts/2019-05-02-bb.markdown
+++ b/_posts/2019-05-02-bb.markdown
@@ -1,6 +1,8 @@
 ---
 title: "Bacteria Builder"
 excerpt: "Educational game to help teach bacterial form and function for Android and Web."
+tags: [Unity, C#]
+author_profile: false
 header:
   image: /assets/images/p_bacteria/logo1.png
   teaser: /assets/images/p_bacteria/teaser1.png
@@ -29,7 +31,8 @@ gallery:
     alt: "Bacteria Builder Screenshot 6"
   - url: /assets/images/p_bacteria/s7.png
     image_path: /assets/images/p_bacteria/s7.png 
-    alt: "Bacteria Builder Screenshot 7"
+    alt: "Bacteria Builde
+    r Screenshot 7"
 ---
 
 Bacteria Builder challenges you to learn about bacterial form and function to create bacteria which can survive in various kinds of environments. Funded by an Educational Resources Grant from the Society for Applied Microbiology, I spent my placement designing, iteratively testing, and creating the game. Originally created for Android, a web version was also created to increase impact. This project gave me the opportunity to test with over 300 student nurses, with a bespoke analytics system. The results from testing were used to further develop and extend the game, and enabled me to carry out a study titled [Building Bacterial Knowledge: Games as Teaching Aides for Higher-Order Thinking Skills](https://www.researchgate.net/publication/328174990_Building_Bacterial_Knowledge_Games_as_Teaching_Aides_for_Higher-Order_Thinking_Skills) which i presented at the 12th Annual European Conference on Games Based Learning.
@@ -38,4 +41,4 @@ Bacteria Builder challenges you to learn about bacterial form and function to cr
 
 {% include gallery caption="Bacteria Builder Android screenshots" %}
 
-The game was created in Unity, and was a very educational. It enabled me to develop my Unity skills, which is extremely useful for rapid prototypeing. I also furthered my academic skills, as this was my first research paper to be published in a conference. That helped me improve my presentation skills.
+The game was created in Unity, and was a very educational experience. It enabled me to develop my Unity skills, which is extremely useful for rapid prototypeing. I also furthered my academic skills, as this was my first research paper to be published in a conference. The extended game and paper presentations I had to deliver on the main track of the conference also significantly improved my presentation skills.
